Changelog
=========

UNRELEASED
----------

- Add testing and support for Django 2.0. No actual code changes were required.
- Escape `KEY_PREFIX` and `VERSION` when used in glob expressions.
- Improve handling timeouts less than 1ms.
- Remove fakeredis support.
- Add datetime, date, time, and timedelta serialization support to the JSON
  serializer.


Version 4.8.0
-------------

Date: 2017-04-25

- Drop deprecated exception with typo ConnectionInterrumped. Use
  ConnectionInterrupted instead.
- Remove many workarounds related to old and not supported versions
  of django and redis-py.
- Code cleaning and flake8 compliance fixes.
- Add better impl for `close` method.
- Fix compatibility warnings with python 3.6


Version 4.7.0
-------------

Date: 2017-01-02

- Add the ability to enable write to slave when master is not available.
- Add `itersize` parameter to `delete_pattern`.


Version 4.6.0
-------------

Date: 2016-11-02

- Fix incorrect behavior of `clear()` method.


Version 4.5.0
-------------

Date: 2016-09-21

- Now only support Django 1.8 and above. Support for older versions has been dropped.
- Remove undocumented and deprecated support for old connection string format.
- Add support for `PASSWORD` option (useful when the password contains url unsafe
  characters).
- Make the package compatible with fake redis.
- Fix compatibility issues with latest django version (1.10).


Version 4.4.4
-------------

Date: 2016-07-25

- Fix possible race condition on incr implementation using
  lua script (thanks to @prokaktus).


Version 4.4.3
-------------

Date: 2016-05-17

- Fix minor ttl inconsistencies.


Version 4.4.2
-------------

Date: 2016-04-21

- Fix timeout bug (thanks to @skorokithakis)


Version 4.4.1
-------------

Date: 2016-04-13

- Add additional check for avoid wrong exception on `get_redis_connection`.


Version 4.4.0
-------------

Date: 2016-04-12

- Make redis client pluggable (thanks to @arnuschky)